--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,7 +4,7 @@
 @import 'libs';
 @import 'global';
 
-
+//header
 .header {
   &__inner {
     display: flex;
@@ -39,3 +39,147 @@
     line-height: 22px;
   }
 }
+
+//footer
+.footer {
+  &__content {
+    background-color: #DFDFDF;
+    padding: 60px 0 80px;
+  }
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__info {
+    width: 540px;
+  }
+  &__info-title {
+    color: $title;
+    @extend %title-font;
+    margin-bottom: 14px;
+    line-height: 23px;
+  }
+  &__info-text {
+    margin-bottom: 16px;
+    max-width: 476px;
+  }
+  &__info-email {
+    font-weight: 600;
+    font-size: 14px;
+    color: $title;
+    margin-bottom: 22px;
+    padding-left: 30px;
+    display: inline-block;
+    position: relative;
+    &::before{
+      content: '';
+      background-image: url(../img/envelope.svg);
+      position: absolute;
+      left: 0;
+      width: 16px;
+      height: 12px;
+      top: 8px;
+    }
+  }
+  &__form {
+    display: flex;
+  }
+  &__form-input {
+    padding: 6px 10px 6px 18px;
+    border: 1px solid rgba($title, .7);
+    border-radius: 21px;
+    background-color: transparent;
+    width: 100%;
+    &::placeholder{
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 27;
+      color: #a1a1a1;
+    }
+  }
+  &__form-button {
+    background-color: $title;
+    border: none;
+    cursor: pointer;
+    color: #fffff0;
+    border-radius: 21px;
+    font-weight: 600;
+    padding: 6px 12px;
+    min-width: 160px;
+    margin-left: 9px;
+  }
+  &__social {
+    width: 125px;
+    margin-right: auto;
+    margin-left: 100px;
+  }
+  &__social-item {
+
+  }
+  &__social-link {
+    padding-left: 28px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      top: 3px;
+      left: 0;
+      width: 16px;
+      height: 16px;
+    }
+  }
+  &__social-link--facebook::before{
+    background-image: url(../img/facebook.svg);
+  }
+  &__social--instagram::before{
+    background-image: url(../img/instagram.svg);
+    width: 14px;
+    height: 14px;
+    top: 4px;
+  }
+  &__social-link--pinterest::before{
+    background-image: url(../img/pinterest.svg);
+  }
+  &__social-link--whatsapp::before{
+    background-image: url(../img/whatsapp.svg);
+    width: 14px;
+    height: 14px;
+  }
+  &__social-link--youtube::before{
+    background-image: url(../img/youtube.svg);
+    width: 18px;
+    height: 12px;
+    top: 4px;
+  }
+  &__social-item,
+  &__menu-item{
+    margin-bottom: 15px;
+    font-weight: 600;
+    font-style: 14px;
+  }
+
+  &__social-link,
+  &__menu-link{
+  color: #707070;
+  }
+
+  &__menu {
+    margin-right: 60px;
+    width: 125px;
+  }
+  &__menu-list {
+
+  }
+  &__menu-item {
+
+  }
+
+  &__copyright {
+    background-color: $title;
+    text-align: center;
+    color: #A1A1A1;
+    padding: 42px 0 41px;
+  }
+}
+
