--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -32,7 +32,29 @@ body{
   padding: 0 15px;
 }
 
-
+//слайдер на главной
+.slick-dots{
+  display: flex;
+	justify-content: center;
+	align-items: center;
+	li{
+		margin: 0 15px;
+	}
+	button{
+		background-color: $title;
+		border: none;
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		padding: 0;
+		font-size: 0;
+	}
+	li.slick-active{
+		button{
+			background-color: #ffEf35;
+		}
+	}
+}
 
 
 
