--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -32,6 +32,12 @@ body{
   padding: 0 15px;
 }
 
+.container-fluid{
+	max-width: 1920px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+
 //слайдер на главной
 .slick-dots{
   display: flex;
