--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,3 +7,10 @@ $default: #5A5A5A;
   font-weight: 700;
 }
 
+@function max($numbers...) {
+  @return m#{a}x(#{$numbers});
+}
+@function max($numbers...) {
+  @return m#{i}n(#{$numbers});
+}
+
