--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,6 +31,7 @@
   width: 100%;
   box-shadow: -2px 3px 17px 0px #000;
   transition: all .5s ;
+  z-index: 5;
   &.rightside-menu--close{
     transform: translateX(500%);
   }
@@ -98,6 +99,20 @@
     @extend %title-font;
     color: rgba(54, 56, 56, 0.9);
     line-height: 22px;
+  }
+  &__list-link--active{
+    padding-bottom: 4px;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 2px;
+      border-radius: 1px;
+      background: rgba($title, .7);
+    }
   }
 }
 
@@ -175,9 +190,6 @@
     margin-right: auto;
     margin-left: 100px;
   }
-  &__social-item {
-
-  }
   &__social-link {
     padding-left: 28px;
     position: relative;
@@ -243,6 +255,28 @@
     padding: 42px 0 41px;
   }
 }
+
+//хлебные крошки
+.bredcrumbs {
+  background-color:  rgba(#DFDFDF, .5);
+  padding: 13px 14px;
+  &__list {
+    display: flex;
+  }
+  &__item::after {
+    content: '/';
+    margin-right: 4px;
+  }
+  &__item:last-child::after{
+    display: none;
+  }
+  &__link {
+    font-size: 14px;
+    color: $default;
+  }
+}
+//хлебные крошки
+
 
 
 // top
@@ -485,3 +519,152 @@
 }
 //works
 
+
+//gallery
+.gallery {
+  padding: 80px 0 90px;
+  &__buttons {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  &__btn {
+    border-radius: 20px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 28px;
+    color: #8F8D8D;
+    border: 1px solid rgba(#454647, .5);
+    background-color: transparent;
+    cursor: pointer;
+    margin: 0 13px;
+    padding: 6px 16px;
+  }
+  &__items {
+    display: grid;
+    grid-gap: 30px 34px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .mixitup-control-active{
+    background-color: rgba(#FFEF35, .5);
+    color: #000;
+    border: 1px solid rgba(#454647, .0);
+  }
+  &__item:first-child{
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+  &__img {
+    object-fit: cover;
+    width: 100%;
+    max-height: 1150px;
+    height: 100%;
+  }
+}
+//gallery
+
+//blog-box
+.blog-box {
+  padding-bottom: 100px;
+  &__title {
+    font-size: 36px;
+    line-height: 51px;
+    text-align: center;
+    @extend %title-font;
+    color: $title;
+    max-width: 430px;
+    margin: 0 auto 30px;
+  }
+  &__items {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+  &__item {}
+  &__img-link {
+    margin-bottom: 19px;
+    display: inline-block;
+  }
+  &__img {}
+  &__links {
+    margin-bottom: 9px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 28px;
+    color: #707070;
+  }
+  &__date,
+  &__author,
+  &__theme {
+    color: inherit;
+  }
+  &__item-title-link {}
+  &__item-title {
+    font-size: 24px;
+    line-height: 38px;
+    @extend %title-font;
+    color: $title;
+  }
+}
+//blog-box
+
+
+// страница  about 
+//блок about
+.about {
+  &__prev {
+    background-image: url(../img/about-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    text-align: center;
+    padding: 160px 0;
+    margin-top: -53px;
+  }
+  &__prev-title {
+    @extend %title-font;
+    color: $title;
+    font-size: 60px;
+    line-height: 80px;
+  }
+  &__content {
+    padding: 130px 0  40px;
+  }
+  &__title {
+    @extend %title-font;
+    color: $title;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 22px;
+    margin-bottom: 22px;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      height: 1px;
+      bottom: 0;
+      left: 0;
+      width: 200px;
+      background-color: #6D7278 ;
+    }
+  }
+  &__text {
+    padding-left: 284px;
+    p{
+      margin-bottom: 30px;
+    }
+  }
+  &__popup {
+    background-image: url(../img/popup-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    min-height: 414px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__popup-play {}
+  &__popup-imgbtn {}
+}
+//блок about
