--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -335,7 +335,7 @@
 
 //collection
 .new-collection {
-  padding: 45px 0 105px;
+  padding: 45px 0 35px;
   text-align: center;
   &__title {
     @extend %title-font;
@@ -364,6 +364,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-column-gap: 30px;
+  padding-bottom: 70px;
   &__item {
     position: relative;
     &:hover .collection__info{
@@ -668,3 +669,89 @@
   &__popup-imgbtn {}
 }
 //блок about
+
+// inspiration
+.inspiration {
+  padding-top: 100px;
+  position: relative;
+  &::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: url(../img/inspiration-bg.jpg);
+    height: 362px;
+    z-index: -1;
+  }
+  &__inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__img {
+    margin-right: 78px;
+    margin-left: -230px;
+  }
+  &__content {
+    max-width: 825px;
+  }
+  &__title {
+    @extend %title-font;
+    color: $title;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 16px;
+    margin-bottom: 24px;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background: #6D7278;
+      height: 1px;
+      width: 200px;
+    }
+  }
+  &__text {
+    margin-bottom: 30px;
+  }
+  &__list {}
+  &__item {
+    @extend %title-font;
+    color: $title;
+    line-height: 23px;
+    margin-bottom: 33px;
+  }
+  &__item-text {}
+  &__item-content {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 14px;
+    border-bottom: 2px solid #fff;
+    border-radius: 4px;
+  }
+  &__num {}
+  &__line {
+    height: 2px;
+    border-radius: 4px;
+    background-color: $title;
+    margin-top: -2px;
+  }
+}
+// inspiration
+
+
+// partners
+.partners {
+  &__items {
+    padding: 16px 60px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+  &__item {
+    margin: 0 auto;
+  }
+}
+// partners
