--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -63,4 +63,23 @@ body{
 }
 
 
+.info-email {
+	font-weight: 600;
+	font-size: 14px;
+	color: $title;
+	margin-bottom: 22px;
+	padding-left: 30px;
+	display: inline-block;
+	position: relative;
+	&::before{
+		content: '';
+		background-image: url(../img/envelope.svg);
+		position: absolute;
+		left: 0;
+		width: 16px;
+		height: 12px;
+		top: 8px;
+	}
+}
+
 
