--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -755,3 +755,135 @@
   margin-top: -53px;
   margin-bottom: 50px;
 }
+
+//contact 
+.contact {
+  padding-bottom: 100px;
+  &__title{
+    @extend %title-font;
+    color: $title;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 30px;
+    margin-bottom: 40px;
+    position: relative;
+    &::after{
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 0;
+      height: 2px;
+      width: 200px;
+      background-color: #6D7278;
+    }
+  }
+  .contact__social{
+    padding-left: 284px;
+    display: flex;
+    margin-bottom: 20px;
+  }
+  &__social-item + .contact__social-item{
+    padding-left: 40px;
+  }
+  &__box{
+    padding-left: 284px;
+  }
+  &__text{
+    margin-bottom: 10px;
+  }
+  &__social-link {}
+  &__phone {
+    color: $default;
+  }
+  &__st {}
+  &__city {
+    margin-bottom: 16px;
+  }
+  &__form {
+    padding-left: 284px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+  }
+  &__form-input {
+    border: 1px solid #DFDFDF;
+    border-radius: 20px;
+    padding: 6px 17px;
+    margin-bottom: 13px;
+    width: 48%;
+    &::placeholder{
+      color: #A1A1A1;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 27px;
+    }
+  }
+  &__form-area {
+    border: 1px solid #DFDFDF;
+    border-radius: 24px;
+    width: 100%;
+    padding: 14px 17px;
+    min-height: 125px;
+    resize: none;
+    margin-bottom: 20px;
+    &::placeholder{
+      color: #A1A1A1;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 27px;
+    }
+  }
+  &__form-btn {
+    cursor: pointer;
+    color: #FFFFF0;
+    background: $title;
+    border-radius: 21px;
+    border: none;
+    padding: 6px 60px;
+    font-weight: 600;
+
+  }
+}
+//contact 
+
+
+//contact slider
+.contact-slider {
+  padding-bottom: 102px;
+  &__link {
+    position: relative;
+    margin-bottom: 20px;
+    &:hover{
+      .contact-slider__title{
+        opacity: 1;
+      }
+    }
+  }
+  &__img {
+    width: 170px;
+    height: 170px;
+    object-fit: cover;
+  }
+  &__title {
+    transition: all .5s;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(#fff, .6);
+    color: $title;
+    @extend %title-font;
+    line-height: 22px;
+    text-align: center;
+    padding: 0 6px;
+    opacity: 0;
+  }
+}
+//contact slider
